--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,11 +1,10 @@
 
 <% if current_user %>
-  <p> Hello <%= current_user.email %>! </p>
+  <p> Welcome <%= current_user.name %>! </p>
   <p> You are a <%= current_user.role %> </p>
   
   <% if current_user.admin? || current_user.hr? %>
-    There are <%= User.count %> users in the system
-    <%= render template: 'jobs/index' %> 
+  <%= render template: 'jobs/index' %>
 
   <% elsif current_user.candidate? %>
     <%= link_to "Apply for Jobs", all_jobs_path %>
@@ -14,9 +13,7 @@
   <%= link_to "Logout", destroy_user_session_path, 'data-turbo-method': :delete %>
 
 <% else %>
-  <p> You are not logged in.</p>
   <%= link_to "Sign Up!", new_user_registration_path %>
-  
   <br />
   <%= link_to "Login", new_user_session_path %>
 <% end %>
