--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -1,5 +1,7 @@
-<p>Welcome <%= @email %>!</p>
+<p class="text-lg mb-4">Welcome <%= @email %>!</p>
 
-<p>You can confirm your account email through the link below:</p>
+<p class="mb-4">You can confirm your account email through the link below:</p>
 
-<p><%= link_to 'Confirm my account', confirmation_url(@resource, confirmation_token: @token) %></p>
+<p>
+  <%= link_to 'Confirm my account', confirmation_url(@resource, confirmation_token: @token), class: "text-blue-500 hover:underline" %>
+</p>
