--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,24 +1,24 @@
-<h2>Change your password</h2>
+<h2 class="text-2xl font-bold mb-6">Change your password</h2>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }, class: "space-y-6") do |f| %>
+  <%= render "devise/shared/error_messages", resource: resource, class: "bg-red-50 text-red-500 px-3 py-2 font-medium rounded-lg mb-4" %>
   <%= f.hidden_field :reset_password_token %>
 
-  <div class="field">
-    <%= f.label :password, "New password" %><br />
+  <div class="field mb-4">
+    <%= f.label :password, "New password", class: "block text-gray-700" %>
     <% if @minimum_password_length %>
-      <em>(<%= @minimum_password_length %> characters minimum)</em><br />
+      <em class="text-gray-500 text-sm">(<%= @minimum_password_length %> characters minimum)</em>
     <% end %>
-    <%= f.password_field :password, autofocus: true, autocomplete: "new-password" %>
+    <%= f.password_field :password, autofocus: true, autocomplete: "new-password", class: "block shadow rounded-md p-2 mt-1 w-full" %>
   </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation, "Confirm new password" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+  <div class="field mb-4">
+    <%= f.label :password_confirmation, "Confirm new password", class: "block text-gray-700" %>
+    <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "block shadow rounded-md p-2 mt-1 w-full" %>
   </div>
 
   <div class="actions">
-    <%= f.submit "Change my password" %>
+    <%= f.submit "Change my password", class: "bg-blue-500 text-white py-2 px-4 rounded-lg hover:bg-blue-600" %>
   </div>
 <% end %>
 
