--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,44 +1,44 @@
-<h2>Sign up</h2>
+<h2 class="text-2xl font-bold mb-5">Sign up Form</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+<%= form_for(resource, as: resource_name, url: registration_path(resource_name), class: "space-y-6") do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
   <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name %>
+    <%= f.label :name, class: "block text-gray-700" %>
+    <%= f.text_field :name, class: "block shadow rounded-md p-2 mt-1 w-1/2" %>
   </div>
 
   <div class="field">
-    <%= f.label :phone_no %><br />
-    <%= f.text_field :phone_no %>
+    <%= f.label :phone_no, class: "block text-gray-700" %>
+    <%= f.text_field :phone_no, class: "block shadow rounded-md p-2 mt-1 w-1/2" %>
   </div>
 
   <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+    <%= f.label :email, class: "block text-gray-700" %>
+    <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "block shadow rounded-md p-2 mt-1 w-1/2" %>
   </div>
 
   <div class="field">
-    <%= f.label :password %>
+    <%= f.label :password, class: "block text-gray-700" %>
     <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
+      <em class="text-gray-500 text-sm">(<%= @minimum_password_length %> characters minimum)</em>
+    <% end %>
+    <%= f.password_field :password, autocomplete: "new-password", class: "block shadow rounded-md p-2 mt-1 w-1/2" %>
   </div>
 
   <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+    <%= f.label :password_confirmation, class: "block text-gray-700" %>
+    <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "block shadow rounded-md p-2 mt-1 w-1/2" %>
   </div>
 
   <div class="field">
-    <%= f.label :resume %><br />
-    <%= f.file_field :resume %>
+    <%= f.label :resume, class: "block text-gray-700" %>
+    <%= f.file_field :resume, class: "block shadow rounded-md p-2 mt-1 w-1/2" %>
   </div>
 
   <div class="actions">
     <br />
-    <%= f.submit "Sign up", data: {turbo: false} %>
+    <%= f.submit "Sign up", data: { turbo: false }, class: "bg-blue-500 text-white py-2 px-4 rounded-lg hover:bg-blue-600" %>
   </div>
 <% end %>
 
