--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,12 +7,17 @@
     <%= csp_meta_tag %>
     <%= stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload" %>
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
-    <!-- <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css"> -->
     <%= javascript_importmap_tags %>
   </head>
-  <body>
-    <main class="container mx-auto mt-28 px-5 flex">
+  <body class="bg-gray-50">
+    <main class="container mx-auto mt-28 px-5 bg-white shadow-lg">
       <%= yield %>
+
+      <% if current_user %>
+        <div class="mt-5">
+          <%= link_to "Logout", destroy_user_session_path, 'data-turbo-method': :delete, class: 'text-red-600 hover:underline' %>
+        </div>
+      <% end %>
     </main>
   </body>
 </html>
