schema_model_changes

--- a/app/views/jobs/_job.html.erb
+++ b/app/views/jobs/_job.html.erb
@@ -40,7 +40,7 @@
 
   <p class="my-5">
     <strong class="block font-medium mb-1">Creator:</strong>
-    <%= User.find(job.creater_id).name %>
+    <%= User.find(job.creator_id).name %>
   </p>
 
   <p class="my-5">
