--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,14 +10,15 @@
     <%= javascript_importmap_tags %>
   </head>
   <body class="bg-gray-50">
-    <main class="container mx-auto mt-28 px-5 bg-white shadow-lg">
-      <%= yield %>
-
+    <main class="container mx-auto mt-28 px-5 bg-blue shadow-lg">
       <% if current_user %>
+      <br />
         <div class="mt-5">
-          <%= link_to "Logout", destroy_user_session_path, 'data-turbo-method': :delete, class: 'text-red-600 hover:underline' %>
+          <%= link_to "Logout", destroy_user_session_path, 'data-turbo-method': :delete, class: "inline rounded-lg py-3 px-5 bg-green-600 text-white font-medium" %>
         </div>
       <% end %>
+      <%= yield %>
+      <br /> <br />
     </main>
   </body>
 </html>
