--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -1,10 +1,4 @@
 <div class="w-full">
-  <% if notice.present? %>
-    <p class="py-2 px-3 bg-green-50 mb-5 text-green-500 font-medium rounded-lg inline-block" id="notice">
-      <%= notice %>
-    </p>
-  <% end %>
-
   <div class="flex justify-between items-center pb-8">
     <h1 class="mx-auto text-4xl font-bold">Jobs</h1>
     <% if current_user.admin? %>
@@ -12,28 +6,47 @@
     <% end %>
   </div>
 
+  <% if current_user.candidate? %>
+      <div class="w-full flex justify-between items-center pb-8">
+        <form method="get" action="<%= jobs_path %>" class="flex space-x-4 w-full">
+          <input type="text" name="search" placeholder="Search jobs by title" class="border rounded px-4 py-2" value="<%= params[:search] %>">
+
+          <select name="department_id" class="border rounded px-4 py-2">
+            <option value="">All Departments</option>
+            <% Department.all.each do |department| %>
+              <option value="<%= department.id %>" <%= "selected" if params[:department_id] == department.id.to_s %>><%= department.dep_name %></option>
+            <% end %>
+          </select>
+
+          <select name="sort" class="border rounded px-4 py-2">
+            <option value="">Sort</option>
+            <option value="recent" <%= "selected" if params[:sort] == "recent" %>>Most Recent</option>
+          </select>
+
+          <button type="submit" class="bg-blue-600 text-white rounded px-4 py-2">Filter</button>
+        </form>
+      </div>
+  <% end %>
+  
   <% if @jobs.present? %>
     <table id="jobs" class="mx-auto w-full table-auto">
+      <thead class="bg-gray-100">
+        <tr>
+          <th class="px-4 py-2 text-left">Title</th>
+          <th class="px-4 py-2 text-left">Description</th>
+          <th class="px-4 py-2 text-left">Company</th>
+          <th class="px-4 py-2 text-left">Work Space Type</th>
+          <th class="px-4 py-2 text-left">Location</th>
+          <th class="px-4 py-2 text-left">Lead Source</th>
+          <th class="px-4 py-2 text-left">Status</th>
+          <th class="px-4 py-2 text-left">Department</th>
+          <th class="px-4 py-2 text-left">Skills</th>
+          <th class="px-4 py-2 text-left">Application Status</th>
+        </tr>
+      </thead>
       <tbody>
         <% @jobs.each do |job| %>
-          <tr class="<%= cycle('bg-green-50', 'bg-white') %>">
-            <td class="px-4 py-3">
-              <%= render job %>
-            </td>
-            <td class="px-3">
-              <ul class="space-y-2">
-                <li>
-                  <%= link_to 'Show', job, class: 'text-blue-600 hover:underline' %>
-                </li>
-                <li>
-                  <%= link_to 'Edit', edit_job_path(job), class: 'text-yellow-600 hover:underline' %>
-                </li>
-                <li>
-                  <%= link_to 'Destroy', job, class: 'text-red-600 hover:underline', data: { turbo_method: :delete, turbo_confirm: "Are you sure?" } %>
-                </li>
-              </ul>
-            </td>
-          </tr>
+          <%= render job %>
         <% end %>
       </tbody>
     </table>
