--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,12 +11,25 @@
   </head>
   <body class="bg-gray-50">
     <main class="container mx-auto mt-28 px-5 bg-blue shadow-lg">
+      <div id="notifications"></div>
+      <% if notice.present? %>
+        <p class="py-2 px-3 bg-green-50 mb-5 text-green-500 font-medium rounded-lg inline-block w-full text-center" id="notice">
+          <%= notice %>
+        </p>
+      <% end %>
+
+      <% if alert.present? %>
+        <p class="py-2 px-3 bg-red-50 mb-5 text-red-500 font-medium rounded-lg inline-block w-full text-center" id="alert">
+          <%= alert %>
+        </p>
+      <% end %>
+
       <% if current_user %>
-      <br />
-        <div class="mt-5">
+        <div class="mt-5 mb-5">
           <%= link_to "Logout", destroy_user_session_path, 'data-turbo-method': :delete, class: "inline rounded-lg py-3 px-5 bg-green-600 text-white font-medium" %>
         </div>
       <% end %>
+
       <%= yield %>
       <br /> <br />
     </main>
