--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,11 +7,11 @@
     <%= csp_meta_tag %>
     <%= stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload" %>
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
+    <%= action_cable_meta_tag %>
     <%= javascript_importmap_tags %>
   </head>
   <body class="bg-gray-50">
     <main class="container mx-auto mt-28 px-5 bg-blue shadow-lg">
-      <div id="notifications"></div>
       <% if notice.present? %>
         <p class="py-2 px-3 bg-green-50 mb-5 text-green-500 font-medium rounded-lg inline-block w-full text-center" id="notice">
           <%= notice %>
