--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -46,7 +46,7 @@
       </thead>
       <tbody>
         <% @jobs.each do |job| %>
-          <%= render job, @applied_for_job %>
+          <%= render job %>
         <% end %>
       </tbody>
     </table>
