--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,10 +14,13 @@
 
   <div>
     <h3 class="text-xl font-semibold">Resume</h3>
-    <% resume = @user.resume %>
-    <%= link_to 'Download Resume', rails_representation_url(resume), class: 'text-blue-500 hover:underline' %>
+    <% if @user.resume.attached? %>
+      <%= link_to 'Download Resume', rails_representation_url(@ser.resume), class: 'text-blue-500 hover:underline' %>
+    <% else %>
+      <p>No resume attached.</p>
+    <% end %>
   </div>
-  
+
   <div>
     <h3 class="text-xl font-semibold">Job Applications</h3>
     <table class="min-w-full bg-white shadow rounded-lg">
@@ -29,8 +32,8 @@
       </thead>
       <tbody>
           <tr>
-            <td class="border px-4 py-2"><%= @most_recent_job.job.title %></td>
-            <td class="border px-4 py-2"><%= @most_recent_job.created_at.strftime("%B %d, %Y %I:%M %p") %></td>
+            <td class="border px-4 py-2"><%= @most_recent_applicant.title %></td>
+            <td class="border px-4 py-2"><%= @most_recent_applicant.created_at.strftime("%B %d, %Y %I:%M %p") %></td>
           </tr>
       </tbody>
     </table>
