--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -5,7 +5,7 @@
 
   <div class="mb-5">
     <%= f.label :name, class: "block text-gray-700 mb-1" %>
-    <%= f.text_field :name, class: "block shadow rounded-md p-2 mt-1 w-1/2" %>
+    <%= f.text_field :name, autofocus: true, class: "block shadow rounded-md p-2 mt-1 w-1/2" %>
   </div>
 
   <div class="mb-5">
@@ -15,7 +15,7 @@
 
   <div class="mb-5">
     <%= f.label :email, class: "block text-gray-700 mb-1" %>
-    <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "block shadow rounded-md p-2 mt-1 w-1/2" %>
+    <%= f.email_field :email, autocomplete: "email", class: "block shadow rounded-md p-2 mt-1 w-1/2" %>
   </div>
 
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
