--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -1,13 +1,6 @@
 <%= form_with(model: @job, local: true, class: "space-y-6") do |form| %>
   <% if @job.errors.any? %>
-    <div id="error_explanation" class="bg-red-50 text-red-500 px-3 py-2 font-medium rounded-lg mt-3">
-      <h2><%= pluralize(@job.errors.count, "error") %> prohibited this job from being saved:</h2>
-      <ul>
-        <% @job.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
-    </div>
+    render partial: 'flash', locals: { job: @job }
   <% end %>
 
   <%= form.label :title, class: "block text-gray-700" %>
@@ -44,12 +37,12 @@
 
   <div class="my-5">
     <%= form.label :department_id, "Select Department", class: "block text-gray-700" %>
-    <%= form.collection_select :department_id, @departments, :id, :dep_name, prompt: "Select a Department", required: true, class: "block shadow rounded-md p-2 mt-1 w-full" %>
+    <%= form.collection_select :department_id, @departments, :id, :name, prompt: "Select a Department", required: true, class: "block shadow rounded-md p-2 mt-1 w-full" %>
   </div>
 
   <div class="my-5">
     <%= form.label :skills, "Select Required Skills", class: "block text-gray-700" %>
-    <%= form.collection_check_boxes :skill_ids, @skills, :id, :skill_name, required: true, class: "space-y-2" %>
+    <%= form.collection_check_boxes :skill_ids, @skills, :id, :name, required: true, class: "space-y-2" %>
   </div>
 
   <div class="my-5">
@@ -59,7 +52,8 @@
 
   <div class="my-5">
     <%= form.label :active, class: "block text-gray-700" %>
-    <%= form.check_box :active, class: "mr-2" %> <%= form.label :active, 'Active', class: "inline" %>
+    <%= form.check_box :active, class: "mr-2" %>
+    <%= form.label :active, 'Active', class: "inline" %>
   </div>
 
   <div class="my-5">
