--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -1,6 +1,6 @@
 <%= form_with(model: @job, local: true, class: "space-y-6") do |form| %>
   <% if @job.errors.any? %>
-    render partial: 'flash', locals: { job: @job }
+    render partial: 'devise/shared/error_messages', locals: { job: @job }
   <% end %>
 
   <%= form.label :title, class: "block text-gray-700" %>
@@ -37,12 +37,12 @@
 
   <div class="my-5">
     <%= form.label :department_id, "Select Department", class: "block text-gray-700" %>
-    <%= form.collection_select :department_id, @departments, :id, :name, prompt: "Select a Department", required: true, class: "block shadow rounded-md p-2 mt-1 w-full" %>
+    <%= form.collection_select :department_id, departments, :id, :name, prompt: "Select a Department", required: true, class: "block shadow rounded-md p-2 mt-1 w-full" %>
   </div>
 
   <div class="my-5">
     <%= form.label :skills, "Select Required Skills", class: "block text-gray-700" %>
-    <%= form.collection_check_boxes :skill_ids, @skills, :id, :name, required: true, class: "space-y-2" %>
+    <%= form.collection_check_boxes :skill_ids, skills, :id, :name, include_hidden: false, required: true, class: "space-y-2" %>
   </div>
 
   <div class="my-5">
