--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -21,27 +21,29 @@
   <% end %>
   
   <% if @jobs.exists? %>
-    <table id="jobs" class="mx-auto w-full table-auto">
-      <thead class="bg-gray-100">
-        <tr>
-          <th class="px-4 py-2 text-left">Title</th>
-          <th class="px-4 py-2 text-left">Description</th>
-          <th class="px-4 py-2 text-left">Company</th>
-          <th class="px-4 py-2 text-left">Work Space Type</th>
-          <th class="px-4 py-2 text-left">Location</th>
-          <th class="px-4 py-2 text-left">Lead Source</th>
-          <th class="px-4 py-2 text-left">Status</th>
-          <th class="px-4 py-2 text-left">Department</th>
-          <th class="px-4 py-2 text-left">Skills</th>
-          <th class="px-4 py-2 text-left">Application Status</th>
-        </tr>
-      </thead>
-      <tbody>
-        <% @jobs.each do |job| %>
-          <%= render job %>
-        <% end %>
-      </tbody>
-    </table>
+    <%= turbo_frame_tag "job" do %>
+      <table id="jobs" class="mx-auto w-full table-auto">
+        <thead class="bg-gray-100">
+          <tr>
+            <th class="px-4 py-2 text-left">Title</th>
+            <th class="px-4 py-2 text-left">Description</th>
+            <th class="px-4 py-2 text-left">Company</th>
+            <th class="px-4 py-2 text-left">Work Space Type</th>
+            <th class="px-4 py-2 text-left">Location</th>
+            <th class="px-4 py-2 text-left">Lead Source</th>
+            <th class="px-4 py-2 text-left">Status</th>
+            <th class="px-4 py-2 text-left">Department</th>
+            <th class="px-4 py-2 text-left">Skills</th>
+            <th class="px-4 py-2 text-left">Application Status</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @jobs.find_each do |job| %>
+            <%= render job %>
+          <% end %>
+        </tbody>
+      </table>
+    <% end %>
   <% else %>
     <p>No jobs available at the moment.</p>
   <% end %>
