--- a/app/views/devise/shared/_error_messages.html.erb
+++ b/app/views/devise/shared/_error_messages.html.erb
@@ -7,7 +7,7 @@
       %>
     </h2>
     <ul class="list-disc ml-5 mt-2">
-      <% resource.errors.full_messages.each do |message| %>
+      <% resource.errors.full_messages.find_each do |message| %>
         <li><%= message %></li>
       <% end %>
     </ul>
