--- a/app/views/jobs/edit.html.erb
+++ b/app/views/jobs/edit.html.erb
@@ -1,6 +1,8 @@
-<div class="mx-auto md:w-2/3 w-full">
-  <h1 class="font-bold text-4xl">Editing job</h1>
+<%= turbo_frame_tag "job" do %>
+  <div class="mx-auto md:w-2/3 w-full">
+    <h1 class="font-bold text-4xl">Editing job</h1>
 
-  <%= render "form", job: @job, departments: @departments, skills: @skills %>
+    <%= render "form", job: @job, departments: @departments, skills: @skills %>
 
-</div>
+  </div>
+<% end %>
