comments resolved (added turbo in apply, edit, view details, added turbo_confirm, minor changes in UI, alignment, created common code partial, use find_each, actioncable issue resolved, recent job issue resolved, add scope in job model)

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -15,7 +15,7 @@
     <div>
       <h3 class="text-xl font-semibold">Resume</h3>
       <% if @user.resume.attached? %>
-        <%= link_to 'Download Resume', rails_blob_path(@user.resume, disposition: "attachment"), class: 'text-blue-500 hover:underline' %>
+        <%= link_to 'Download Resume', rails_representation_url(@user.resume, disposition: "attachment"), class: 'text-blue-500 hover:underline' %>
       <% else %>
         <p>No resume attached.</p>
       <% end %>
