--- a/app/views/jobs/_job.html.erb
+++ b/app/views/jobs/_job.html.erb
@@ -31,14 +31,7 @@
             <%= link_to 'Destroy', job, 'data-turbo-method': :delete, data: { turbo_confirm: 'Are you sure?' }, class: 'text-red-600 hover:underline' %>
           </li>
         <% end %>
-
-        <% if policy(job).apply? %>
-          <li>
-              <%= button_to 'Apply', apply_job_path(job), method: :post, data: { turbo_confirm: 'Are you sure you want to apply for this job?' }, class: 'text-blue-600 hover:underline' %>
-          </li>
-        <% elsif current_user.candidate? %>
-            <p> Applied </p>
-        <% end %>
+        <%= render partial: "apply", locals: { job: job } %>                                                                                                                                                                                           
       </ul>
     </td>
   </tr>
